# qutebrowserfiles

./: bootstrap.sh  config.py  pyproject.toml  quickmarks
bookmarks/: urls
js/: translate.js
src/: mapping.py  style.py
userscripts/: lpass.py  qr.sh
