[project]
name = "qutebrowser_config"
version = "0.1.0"
description = ""
authors = [
    {name = "Lim Chun Leng",email = "limchunleng@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.391"
isort = "^5.13.2"
black = "^24.10.0"
qutebrowser = "^3.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
